Fixed extra margin below logo on logged out pages.

--- a/assets/css/application.styl
+++ b/assets/css/application.styl
@@ -535,7 +535,6 @@ room-sidebar-width = 200px
     background-color #56C0A5
 
 .brand
-  margin-bottom 5px
   text-align center
 
   > a
